// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Bubble /> arrowPosition property should accept "bottom-left" as value 1`] = `
.c0 {
  display: inline-block;
  margin: 0 !important;
  background-color: transparent;
  border: none;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: inherit;
  padding: 0;
}

@media (min-height:100%) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0.5rem;
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem;
    box-shadow: none;
  }
}

<div
  className="c0"
/>
`;

exports[`<Bubble /> arrowPosition property should accept "bottom-right" as value 1`] = `
.c0 {
  display: inline-block;
  margin: 0 !important;
  background-color: transparent;
  border: none;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: inherit;
  padding: 0;
}

@media (min-height:100%) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0;
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem;
    box-shadow: none;
  }
}

<div
  className="c0"
/>
`;

exports[`<Bubble /> arrowPosition property should accept "top-left" as value 1`] = `
.c0 {
  display: inline-block;
  margin: 0 !important;
  background-color: transparent;
  border: none;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: inherit;
  padding: 0;
}

@media (min-height:100%) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
    border-top-left-radius: 0;
    border-top-right-radius: 0.5rem;
    box-shadow: none;
  }
}

<div
  className="c0"
/>
`;

exports[`<Bubble /> arrowPosition property should accept "top-right" as value 1`] = `
.c0 {
  display: inline-block;
  margin: 0 !important;
  background-color: transparent;
  border: none;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: inherit;
  padding: 0;
}

@media (min-height:100%) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0;
    box-shadow: none;
  }
}

<div
  className="c0"
/>
`;

exports[`<Bubble /> should adopt the "backgroundColor" prop 1`] = `
.c0 {
  display: inline-block;
  margin: 0 !important;
  background-color: white;
  border: none;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: inherit;
  padding: 0;
}

@media (min-height:100%) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem;
    box-shadow: none;
  }
}

<div
  className="c0"
/>
`;

exports[`<Bubble /> should adopt the "color" prop 1`] = `
.c0 {
  display: inline-block;
  margin: 0 !important;
  background-color: transparent;
  border: none;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: white;
  padding: 0;
}

@media (min-height:100%) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem;
    box-shadow: none;
  }
}

<div
  className="c0"
  color="white"
/>
`;

exports[`<Bubble /> should adopt the "isGhost" prop 1`] = `
.c0 {
  display: inline-block;
  margin: 0 !important;
  background-color: transparent;
  border: 2px solid inherit;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: inherit;
  padding: 0;
}

@media (min-height:100%) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem;
    box-shadow: none;
  }
}

<div
  className="c0"
/>
`;

exports[`<Bubble /> should adopt the "padding" prop 1`] = `
.c0 {
  display: inline-block;
  margin: 0 !important;
  background-color: transparent;
  border: none;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: inherit;
  padding: 0 1em;
}

@media (min-height:100%) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem;
    box-shadow: none;
  }
}

<div
  className="c0"
/>
`;

exports[`<Bubble /> should adopt the "showArrowBreakpoint" prop 1`] = `
.c0 {
  display: inline-block;
  margin: 0 !important;
  background-color: transparent;
  border: none;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: inherit;
  padding: 0;
}

@media (min-height:10rem) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem;
    box-shadow: none;
  }
}

<div
  className="c0"
/>
`;

exports[`<Bubble /> should render and match the snapshot 1`] = `
.c0 {
  display: inline-block;
  margin: 0 !important;
  background-color: transparent;
  border: none;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: inherit;
  padding: 0;
}

@media (min-height:100%) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem;
    box-shadow: none;
  }
}

<div
  className="c0"
/>
`;
